# dash-skel

./: Makefile  README.md  main.py  pyproject.toml
pages/: home.py  tool.py
pages/components/: guide.py
