[project]
name = "dash-skel"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.1.1",
    "dash-auth>=2.3.0",
    "dash-bootstrap-components>=2.0.3",
    "dash-extensions>=2.0.4",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "plotly>=6.2.0",
    "tzdata>=2024.1",
]
